# KIU_ClubEngine

./: .gitignore  CMakeLists.txt  README.md
ClubEngine/: CMakeLists.txt
ClubEngine/Engine/: CMakeLists.txt
ClubEngine/Engine/Programs/: CMakeLists.txt
ClubEngine/Engine/Programs/AssetImporter/: CMakeLists.txt  main.cpp
ClubEngine/Engine/Source/Runtime/: CMakeLists.txt
ClubEngine/Engine/Source/Runtime/Asset/: CMakeLists.txt
ClubEngine/Engine/Source/Runtime/Asset/Private/: AssetAccess.cpp  Handle.cpp  IAssetResolver.cpp  UMaterial.cpp  UShader.cpp  UStaticMesh.cpp  UTexture.cpp
ClubEngine/Engine/Source/Runtime/Asset/Public/Asset/: AssetAccess.h  AssetManager.h  Handle.h  IAssetResolver.h  Slot.h  SubMesh.h  UMaterial.h  UShader.h  UStaticMesh.h  UTexture.h
ClubEngine/Engine/Source/Runtime/AssetImport/: CMakeLists.txt
ClubEngine/Engine/Source/Runtime/AssetImport/Private/: Image.cpp  ObjLoader.cpp  ObjMeshImporter.cpp
ClubEngine/Engine/Source/Runtime/AssetImport/Public/AssetImport/: Image.h  MeshImportResult.h  ObjLoader.h  ObjMeshImporter.h  StaticMeshImportData.h
ClubEngine/Engine/Source/Runtime/Core/: CMakeLists.txt
ClubEngine/Engine/Source/Runtime/Core/Private/: FileIO.cpp  Input.cpp  Log.cpp
ClubEngine/Engine/Source/Runtime/Core/Private/Config/: ConfigSystem.cpp  IniParser.cpp
ClubEngine/Engine/Source/Runtime/Core/Private/Delegate/: DelegateHandle.cpp
ClubEngine/Engine/Source/Runtime/Core/Public/Core/: ClubCore.h  FileIO.h  Input.h  Log.h
ClubEngine/Engine/Source/Runtime/Core/Public/Core/Config/: ConfigSystem.h  IniParser.h  IniTypes.h
ClubEngine/Engine/Source/Runtime/Core/Public/Core/Delegate/: DelegateHandle.h  MulticastDelegate.h  MulticastDelegate.inl
ClubEngine/Engine/Source/Runtime/Core/Public/Core/Math/: MathCore.h  Matrix4x4.h  Matrix4x4.inl  Quat.h  Quat.inl  Transform.h  (+2 more)
ClubEngine/Engine/Source/Runtime/CoreUObject/: CMakeLists.txt
ClubEngine/Engine/Source/Runtime/CoreUObject/Private/: UObject.cpp  UObjectHandle.cpp  UObjectRegistry.cpp
ClubEngine/Engine/Source/Runtime/CoreUObject/Public/CoreUObject/: TObjectHandle.h  UObject.h  UObjectHandle.h  UObjectRegistry.h
ClubEngine/Engine/Source/Runtime/Engine/: CMakeLists.txt
ClubEngine/Engine/Source/Runtime/Engine/Private/: Application.cpp  AssetContext.cpp  AssetLibrary.cpp  CEConvert.cpp  CEConvert.h  FpsSystem.cpp  ISystem.cpp
ClubEngine/Engine/Source/Runtime/Engine/Private/Systems/: FpsSystem.cpp  RenderSystem.cpp  WindowSystem.cpp
ClubEngine/Engine/Source/Runtime/Engine/Public/ClubEngine/: Application.h
ClubEngine/Engine/Source/Runtime/Engine/Public/Engine/: Application.h  AssetContext.h  AssetLibrary.h  EngineTypes.h  FpsSystem.h  ISystem.h
ClubEngine/Engine/Source/Runtime/Launch/: CMakeLists.txt
ClubEngine/Engine/Source/Runtime/Launch/Private/: Launch.cpp
ClubEngine/Engine/Source/Runtime/Launch/Public/Launch/: EntryPoint.h  Launch.h
ClubEngine/Engine/Source/Runtime/Platform/: CMakeLists.txt
ClubEngine/Engine/Source/Runtime/Platform/Private/: GLFWWindow.cpp
ClubEngine/Engine/Source/Runtime/Platform/Public/Platform/: GLFWWindow.h  IWindow.h  WindowConfig.h
ClubEngine/Engine/Source/Runtime/Project/: CMakeLists.txt
ClubEngine/Engine/Source/Runtime/Project/Private/: ActiveProject.cpp  ProjectRegistry.cpp
ClubEngine/Engine/Source/Runtime/Project/Public/Project/: ActiveProject.h  ProjectDescriptor.h  ProjectRegistry.h
ClubEngine/Engine/Source/Runtime/RHI.OpenGL/: CMakeLists.txt
ClubEngine/Engine/Source/Runtime/RHI.OpenGL/Private/: EBO.cpp  GLConvert.cpp  GLConvert.h  GLIndexBuffer.cpp  GLRHI.cpp  GLShader.cpp  GLTexture.cpp  GLVertexArray.cpp  GLVertexBuffer.cpp  OpenGLRHI.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp
ClubEngine/Engine/Source/Runtime/RHI.OpenGL/Private/Texture/: Image.cpp
ClubEngine/Engine/Source/Runtime/RHI.OpenGL/Public/RHI.OpenGL/: EBO.h  GLIndexBuffer.h  GLRHI.h  GLShader.h  GLTexture.h  GLVertexArray.h  GLVertexBuffer.h  OpenGLRHI.h  Shader.h  Texture.h  VAO.h  VBO.h
ClubEngine/Engine/Source/Runtime/Render/: CMakeLists.txt
ClubEngine/Engine/Source/Runtime/Render/Private/: EBO.cpp  Material.cpp  Render.cpp  RenderAssets.cpp  Shader.cpp  SubMesh.cpp  Texture.cpp  VAO.cpp  VBO.cpp
ClubEngine/Engine/Source/Runtime/Render/Private/Import/: ObjLoader.cpp
ClubEngine/Engine/Source/Runtime/Render/Private/Mesh/: Vertex.cpp
ClubEngine/Engine/Source/Runtime/Render/Private/Texture/: Image.cpp
ClubEngine/Engine/Source/Runtime/Render/Public/Render/: EBO.h  Material.h  RenderAssets.h  RenderTypes.h  Shader.h  SubMesh.h  Texture.h  VAO.h  VBO.h
ClubEngine/Engine/Source/Runtime/RenderCore/: CMakeLists.txt
ClubEngine/Engine/Source/Runtime/RenderCore/Private/: Vertex.cpp
ClubEngine/Engine/Source/Runtime/RenderCore/Private/RHI/: IRHI.cpp
ClubEngine/Engine/Source/Runtime/RenderCore/Public/RenderCore/: RenderTypes.h  Vertex.h
ClubEngine/Engine/Source/Runtime/Renderer/: CMakeLists.txt
ClubEngine/Engine/Source/Runtime/Renderer/Private/: Renderer.cpp  SubMesh.cpp
ClubEngine/Engine/Source/Runtime/Renderer/Public/Renderer/: Renderer.h
ClubEngine/Projects/Game1/: CMakeLists.txt
ClubEngine/Projects/Game1/Source/: Entry.cpp
ClubEngine/Projects/Game1/Source/Sandbox/: CMakeLists.txt
ClubEngine/Projects/Game1/Source/Sandbox/Private/: Sandbox.cpp
ClubEngine/Projects/Game1/Source/Sandbox/Public/: Sandbox.h
ClubEngine/Saved/: ProjectRegistry.json
ClubEngine/Templates/Project/: CMakeLists.txt  [PROJ_NAME].clubproject
ClubEngine/Templates/Project/Config/: DefaultGame.ini  DefaultRender.ini
ClubEngine/Templates/Project/Source/: Entry.cpp
ClubEngine/Templates/Project/Source/[PROJ_NAME]/Private/: [PROJ_NAME].cpp
ClubEngine/Templates/Project/Source/[PROJ_NAME]/Public/: [PROJ_NAME].h
ClubEngine/Tools/Unix/: club-build-engine.sh  club-build-project.sh  club-clean-env.sh  club-init.sh  club-new-project.sh  club-register-project.sh
ClubEngine/Tools/Windows/: club-build-engine.bat  club-build-project.bat  club-clean-env.bat  club-init.bat  club-new-project.bat  club-register-project.bat
ClubEngine/cmake/: GenerateConfig.cmake
(+245 files in other folders)
